Changes footer position to sticky to prevent horizontal overflow

--- a/resources/assets/sass/_core.scss
+++ b/resources/assets/sass/_core.scss
@@ -454,7 +454,7 @@ footer > ul{
 //homepage
 .full-width{
 	width: 100vw;
-	position: relative;
+	position: sticky;
 	left: 50%;
 	margin-left: -50vw;
 	padding: 5px 10px 30px;
